feat: integrazione front end e backend
Co-authored-by: Giuseppe0075 <giuseppesica03@gmail.com>
Co-authored-by: Emanuele A. <161335121+numberzeroo@users.noreply.github.com>